--- a/style.css
+++ b/style.css
@@ -88,6 +88,13 @@ body {
   color: #1c1c1c;
 }
 
+.icones {
+  align-self: flex-end;
+  background: linear-gradient(230.65deg, #499CFE 27.49%, #9CC8FC 83.19%);
+  box-shadow: 2px 2px 4px rgba(16, 16, 16, 0.42);
+  border-radius: 20px;
+}
+
 .dark {
   background: linear-gradient(236.85deg, #375b86 27.26%, #6b87a9 96.03%);
 }
